BTA-7084-fix-tz-docs-header-misalignment (#82)
[BTA-7084](https://azafinance.atlassian.net/browse/BTA-7084): Update API documentation for recipient type

Changes
---------
- Updated header width css that was causing a misalignment in Firefox browser.

--- a/_sass/bootswatch/yeti/_variables.scss
+++ b/_sass/bootswatch/yeti/_variables.scss
@@ -348,7 +348,7 @@ $container-desktop:            (940px + $grid-gutter-width) !default;
 $container-md:                 $container-desktop !default;
 
 // Large screen / wide desktop
-$container-large-desktop:      (1305px + $grid-gutter-width) !default;
+$container-large-desktop:      (1330px + $grid-gutter-width) !default;
 //** For `$screen-lg-min` and up.
 $container-lg:                 $container-large-desktop !default;
 
